# hermes_common

./: CMakeLists.txt  README  _hermes_common.cpp  _hermes_common.pxd  _hermes_common.pyx  _hermes_common_api_new.cpp  _hermes_common_api_new.h  common.cpp  common.h  convert_api.py  index.html  matrix.cpp  matrix.h  python_api.cpp  python_api.h  python_solvers.cpp  python_solvers.h  solvers.cpp  solvers.h  sparselib_solver.cpp  stdcython.h  superlu_solver.cpp  umfpack_solver.cpp
doc/: conf.py
doc/src/: cpp.rst  python.rst
html/: .buildinfo  genindex.html  index.html  modindex.html  objects.inv  search.html  searchindex.js
html/src/: cpp.html  python.html
tests/: CMakeLists.txt  test_matrices.py
tests/cpp-callbacks/: CMakeLists.txt  main.cpp
tests/leaks/: CMakeLists.txt  main.cpp  test_dealloc.py
tests/matrix/: main.cpp
tests/matrix-io/: matrix-io
tests/python-in-c/: CMakeLists.txt  main.cpp
tests/python-in-cpp/: CMakeLists.txt  main.cpp
tests/solvers/: main.cpp
